fix(ris): avoid grid to overlap the parent

--- a/src/React InstantSearch/src/App.css
+++ b/src/React InstantSearch/src/App.css
@@ -14,7 +14,7 @@ em { background: cyan; font-style: normal }
 }
 .ais-Hits__root {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 47.5% 47.5%;
   grid-gap: 5%;
   margin-bottom: 1em;
 }
